kubernetes/useful/manifests/kustomize/base/echo.kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: echoserver
---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: echoserver-ingress-route
# spec:
#   entryPoints:
#     - websecure
#   routes:
#   - kind: Rule
#     match: Host(`yoofionline.com`)
#     services:
#     - name: echoserver
#       namespace: default
#       port: 80
#   tls:
#     secretName: yoofionline-tls
