kubernetes/useful/manifests/kustomize/base/echo-kube-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: echoserver
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver-https
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      namespace: traefik
      kind: Gateway
  hostnames:
    - yoofionline.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echoserver
          namespace: default
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: traefik-gateway-cert-access
  namespace: default  # Must be in the same namespace as the Secret
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: traefik  # The namespace where your Gateway is located
  to:
  - group: ""  # Core API group (for Secrets)
    kind: Secret
    name: yoofionline-tls
